[feature/ms-427][leave] + fix bug table align

--- a/statics/assets/css/my-style.css
+++ b/statics/assets/css/my-style.css
@@ -184,6 +184,10 @@ div.inline {
     margin-left: auto;
 }
 
+.dataTables_filter + .util-btn {
+    margin-left: unset;
+}
+
 .row-custom-filter {
     margin-bottom: 0 !important;
     padding-bottom: 0 !important;
